Fixed: DnD: Wrong pointer x-position on panels with left scrollbars (#677)

--- a/src/styles/themes/plain/sidebar/sidebar.styl
+++ b/src/styles/themes/plain/sidebar/sidebar.styl
@@ -220,7 +220,7 @@ body
 .pointer
   position: absolute
   top: 0
-  left: 0
+  left: var(--pointer-left)
   width: 32px
   height: 24px
   z-index: -1
@@ -277,6 +277,7 @@ for i in 1..12
   width: 100%
   height: 100%
   opacity: 1
+  overflow: hidden
   &:before, &:after
     content: ''
     position: absolute
