--- a/src/styles/themes/proton/sidebar/sidebar.styl
+++ b/src/styles/themes/proton/sidebar/sidebar.styl
@@ -209,7 +209,7 @@ body
 .pointer
   position: absolute
   top: 0
-  left: 0
+  left: var(--pointer-left)
   width: 32px
   height: 24px
   z-index: -1
@@ -266,6 +266,7 @@ for i in 1..12
   width: 100%
   height: 100%
   opacity: 1
+  overflow: hidden
   &:before, &:after
     content: ''
     position: absolute
